--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
