--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.23.1",
     "remark-gfm": "^4.0.0",
     "styled-components": "^6.1.11",
+    "use-context-selector": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
